--- a/embed/r6.html
+++ b/embed/r6.html
@@ -29,7 +29,7 @@
             autoplay    : false,
             mute        : false,
             live        : true,
-            imageUrl    : "https://pbs.twimg.com/profile_images/1272570158964498432/_nbMzcVc_400x400.jpg",
+            imageUrl    : "https://ewscripps.brightspotcdn.com/2c/7a/2284f50e49c1b7595592ddfc51f5/hbo.png",
             channel     : "livestreaming",
             videoUrl    : "https://liveorigin01.hbogoasia.com:8443/origin/live/main/HBO/index.m3u8",
             adRules     : '',
