--- a/embed/mytv.html
+++ b/embed/mytv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://content.jwplatform.com/v2/media/YtKBjwyn/poster.jpg?width=720" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://zet.pluginsandthemes.ro/http://185.238.0.145:1313/c/max/mytv-hd.m3u8" type="application/x-mpegURL" />
+        <source src="https://zet.pluginsandthemes.ro/http://rr2.dens.tv/s/s46/01.m3u8" type="application/x-mpegURL" />
         
        </video>
      <script>
