--- a/embed/spacetoon1.html
+++ b/embed/spacetoon1.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://kastproxy-us.herokuapp.com/http://livestream.biznetvideo.net/biznet_kids/smil:kids.smil/playlist.m3u8?bizkeylivestarttime=0&bizkeyliveendtime=0&bizkeyliveCustomParameter=myParameter&bizkeylivehash=qAri1M2xu_MAlnHwVRtOs24lR8Y_HSDijN2CRNghifUllhYqQSDlkd0qE8CkZwxC" type="application/x-mpegURL" />
+        <source src="https://streams.spacetoon.com/live/stchannel/smil:livesmil.smil/playlist.m3u8" />
        </video>
      <script>
       window.hola_player();
