--- a/embed/spacetoon2.html
+++ b/embed/spacetoon2.html
@@ -24,7 +24,7 @@
   <body class="desktop">
 
     <video poster="https://cdn1.mbahnunungonline.net/images/spacetoon-tv-stream.jpg?v=8.3.2" id="player" class="video-js vjs-big-play-centered vjs-fill" controls autoplay>
-    <source src="https://kastproxy-us.herokuapp.com/http://livestream.biznetvideo.net/biznet_kids/smil:kids.smil/playlist.m3u8?bizkeylivestarttime=0&bizkeyliveendtime=0&bizkeyliveCustomParameter=myParameter&bizkeylivehash=qAri1M2xu_MAlnHwVRtOs24lR8Y_HSDijN2CRNghifUllhYqQSDlkd0qE8CkZwxC" type="application/x-mpegURL" />
+    <source src="https://streams.spacetoon.com/live/stchannel/smil:livesmil.smil/playlist.m3u8" type="application/x-mpegURL" />
     </video>
 
   <script src="//cdn.jsdelivr.net/npm/videojs-contrib-hls/dist/videojs-contrib-hls.js"></script>
