--- a/embed/r5.html
+++ b/embed/r5.html
@@ -33,7 +33,7 @@
             live        : true,
             imageUrl    : "../img/thumbs/BAextreme-600x403.jpg?v=8.3.2",
             channel     : "livestreaming",
-            videoUrl    : "https://kastproxy-us.herokuapp.com/http://rr1.dens.tv/h/h15/index.m3u8",
+            videoUrl    : "https://admdn2.cdn.mangomolo.com/nagtv/smil:nagtv.stream.smil/playlist.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
