--- a/embed/r5.html
+++ b/embed/r5.html
@@ -31,7 +31,7 @@
             autoplay    : false,
             mute        : false,
             live        : true,
-            imageUrl    : "../img/thumbs/BAextreme-600x403.jpg?v=8.3.2",
+            imageUrl    : "https://i.pinimg.com/564x/37/e0/22/37e0226e5af4a0917ef26fdba4908b3c.jpg?v=8.3.2",
             channel     : "livestreaming",
             videoUrl    : "https://admdn2.cdn.mangomolo.com/nagtv/smil:nagtv.stream.smil/playlist.m3u8",
             adRules     : '',
