--- a/embed/elshintatv.html
+++ b/embed/elshintatv.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-       
+   <head>
+       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
        <!-- Start Meta Ads -->
        <meta name="platform" content="desktop" />
        <meta name="site_name" content="streaming" />
        <!-- End Meta Ads -->
-       <title>Live Streaming</title>
+       <title>SCTV Live Streaming</title>
        <style>
            body {
                margin:0;
@@ -15,15 +15,18 @@
                overflow: hidden;
            }
        </style>
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
+       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+       <script src="//cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://4.bp.blogspot.com/-M8mlcK40_tA/W-f4QOPa4GI/AAAAAAAAKDE/JMZNmB7JLQY1awKGNlX7OSrt1DKOFJIYwCLcBGAs/s1600/elshintaTV.jpg" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://4.bp.blogspot.com/-M8mlcK40_tA/W-f4QOPa4GI/AAAAAAAAKDE/JMZNmB7JLQY1awKGNlX7OSrt1DKOFJIYwCLcBGAs/s1600/elshintaTV.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="http://rrelshinta.dens.tv/s/s10/index.m3u8" type="application/x-mpegURL" />
-       </video>
+        </video>
      <script>
     (function(){
-      window.hola_player({title: 'elshintaTV'});
+      window.hola_player({title: 'ElshintaTV'});
     })();
   </script>
+     </div>
+   </body>
+</html>
