--- a/embed/aswajatv.html
+++ b/embed/aswajatv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-       
+   <head>
+       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
        <!-- Start Meta Ads -->
        <meta name="platform" content="desktop" />
@@ -15,16 +15,18 @@
                overflow: hidden;
            }
        </style>
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
+       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+       <script src="//warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
         <video poster="https://1.bp.blogspot.com/-vvnceKAsI7g/YLevY4uHBuI/AAAAAAAABDU/9T6M3eAI3hoxHr65U3SUMzJCIh_lhQCtgCLcBGAsYHQ/s0/nuChannel.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://5d63d49f772ce.streamlock.net/nuchannel/udp.stream/playlist.m3u8" type="application/x-mpegURL" />
-       </video>
+        </video>
      <script>
-      window.hola_player();
-     </script>
+    (function(){
+      window.hola_player({title: 'NU Channel'});
+    })();
+  </script>
      </div>
    </body>
 </html>
